--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <meta property="og:site_name" content="DEWA234" />
    <meta property="og:image:alt" content="DEWA234" />
    <meta property="og:image" content="https://i.ibb.co/KjYHRss/pink-DEWA234.png" />
+   <meta name="google-site-verification" content="eyG2S93RcFcFduH1T908dCR8b93pv-N5MOC3v8fpRws" />
 
    <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js" />
    <script async src="https://cdn.ampproject.org/v0.js"></script>
